--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -319,7 +319,7 @@
 @conference{faster-rcnn,
   title = {Faster {R-CNN}: Towards Real-Time Object Detection with Region Proposal Networks},
   author = {Shaoqing REN and Kaiming HE and Ross GIRSHICK and Jian SUN},
-  booktitle = {Advances in Neural Information Processing Szstems ({NIPS})},
+  booktitle = {Advances in Neural Information Processing Systems ({NIPS})},
   year = {2015},
 }
 
