--- a/text/1-intro.tex
+++ b/text/1-intro.tex
@@ -4,7 +4,7 @@
 In the last years, the field of computer science is permanently shaken by one 
 term: Artificial neural networks (\zk{ANN}s). Some people perceive it almost as 
 a magical formula. And even though \zk{ANN}s are not a spell able to solve 
-everything, they have wide applications.Their applications are in finance, data 
+everything, they have wide applications. Their applications are in finance, data 
 mining, language recognition, computer vision and many more.
 
 Another term that can be heard more and more is \textit{the information age}. 
@@ -13,7 +13,7 @@ amounts of data.
 
 The huge amount of data is a fuel for \zk{ANN}s. One hundred years ago, an 
 artificial intelligence was a phantasmagoria of science-fiction writers. Fifty 
-years ago, it was an idea facing only derision. Twenty five years ago, a design 
+years ago, it was an idea facing only derision. Twenty-five years ago, a design 
 doomed to failure due to a lack of training data. Twelve years ago, a bold idea 
 of few men. Five years ago, an earthquake in each branch of the field of 
 computer science.
@@ -27,17 +27,17 @@ therefore also in \zk{GIS}, in tasks of detection and classification.
 Chapter \ref{cnn} will briefly introduce the~theory behind \zk{CNN}s. In the 
 first part, the~history and the motivation behind them will be described. The 
 second part covers multiple types of layers used in \zk{CNN}s. Few pioneering 
-architectures will will be covered.
+architectures will be covered.
 
 Chapter \ref{image-ann} will introduce the term computer vision. Various tasks 
 of computer vision will be named and few breakthrough architectures not 
 mentioned in the \zk{CNN} chapter will be described there. The research which 
 concluded in the selection of Mask \zk{R-CNN} as the architecture for the 
-implemetation will be depicted in this chapter.
+implementation will be depicted in this chapter.
 
 Chapter \ref{technologies} will introduce some of the most important 
 technologies used during
-the~above mentioned implementation.
+the~above-mentioned implementation.
 
 The implementation will be the topic of chapter \ref{implementation}. It will 
 summarize the motivation behind the architecture choose and code decisions, and 
